--- a/chating-app/src/components/signIn/SignIn.css
+++ b/chating-app/src/components/signIn/SignIn.css
@@ -30,14 +30,17 @@
   
   .title {
     color: var(--dark);
-    font-size: 26px;
-    font-weight: 700;
-    margin-bottom: 25px;
+    font-size: 18px;
+    font-weight: 600;
+    margin: 18px 0 0 0;
+
+  
   }
  
   .input-group {
     position: relative;
-    margin: 20px 0;
+   
+ 
   }
   
   .input-group input {
@@ -125,12 +128,13 @@
   .logo-container {
     display: flex;
     justify-content: center;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   
   .logo {
-    width: 300px;
-    height: 80px;
-    object-fit: contain;
+    width: 230px;
+    height: 70px;
+    object-fit: cover;
   }
   
+
