--- a/chating-app/src/components/homeBox/HomBox.css
+++ b/chating-app/src/components/homeBox/HomBox.css
@@ -67,8 +67,8 @@
 
 /* Logout Button */
 .logout-btn {
-  background-color: rgba(255, 255, 255, 0.2);
-  color: var(--white);
+  background-color:var(--white);
+  color: var(--accent-dark);
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 8px 16px;
   border-radius: 20px;
@@ -79,8 +79,8 @@
 }
 
 .logout-btn:hover {
-  background-color: var(--white);
-  color: var(--accent-dark);
+  background-color: var(--accent-light);
+  color: var(--bg-cream);
 }
 
 .header-info h2 {
