--- a/Recipe-Book-App/src/components/recipeForm/RecipeForm.css
+++ b/Recipe-Book-App/src/components/recipeForm/RecipeForm.css
@@ -58,7 +58,7 @@
   .recipe-btn {
     width: 100%;
     background: var(--primary-orange);
-    color: var(--primary-orange);
+    color: var(--card-bg);
     padding: 12px;
     border: none;
     border-radius: 12px;
